# Wrapped-WASM

./: README.md
mylib-py/: .gitignore  pyproject.toml
mylib-py/mylib/: __init__.py  export_wasm.py  mylib_rs.wasm
mylib-py/tests/: test_package.py
mylib-rs/: Cargo.toml
